samples/_failures_safe/1761205579_c78deb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_112836ae.c: In function ‘main’:
./samples/SAFE/__tmp_112836ae.c:157:51: error: expected ‘)’ at end of input
  157 |         if (scanf("%d %d %d", &from, &to, &weight)
      |            ~                                      ^
      |                                                   )
./samples/SAFE/__tmp_112836ae.c:157:9: error: expected declaration or statement at end of input
  157 |         if (scanf("%d %d %d", &from, &to, &weight)
      |         ^~
./samples/SAFE/__tmp_112836ae.c:157:9: error: expected declaration or statement at end of input
